recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:4: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.tail == Nil)
  ^